[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-kiharalab"
dynamic = ["version", "dependencies"]
authors = [
    {name = "Daniel Del Hoyo", email = "ddelhoyo@cnb.csic.es"},
    {name = "Martín Salinas", email = "ssalinasmartin@gmail.com"},
]
description = "Scipion plugin that integrates Kiharalab's software."
keywords = ["scipion", "kiharalab", "scipion-3.0", "EM"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable"
]
readme = "README.md"
license = { "file" = "LICENSE" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-kiharalab"
Issues = "https://github.com/scipion-em/scipion-em-kiharalab/issues"

[tool.setuptools.dynamic]
version = {attr = "kiharalab.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.entry-points."pyworkflow.plugin"]
kiharalab = "kiharalab"

[tool.setuptools.package-data]
kiharalab = ["protocols.conf", "kiharalab_logo.png"]
